--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: Holzhandel Kürten
 subtitle: Herzlich willkommen bei Holzhandel Kürten in Windeck, Rhein-Sieg-Kreis
+bigimg: ![Welle][/img/Welle.jpg]
 use-site-title: true
 ---
 
