--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Holzhandel Kürten
 subtitle: Herzlich willkommen bei Holzhandel Kürten in Windeck, Rhein-Sieg-Kreis
-bigimg: /img/Welle.jpg
+bigimg: /img/Welle.jpg /img/Holzfaeller.jpg
 use-site-title: true
 ---
 
