--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: page
 title: Holzhandel Kürten
 subtitle: Herzlich willkommen bei Holzhandel Kürten in Windeck, Rhein-Sieg-Kreis
-bigimg: /img/Holzfaeller.jpg
+bigimg:
+  - /img/Holzfaeller.jpg
+  - /img/Welle.jpg
 use-site-title: true
 ---
 
